pagination and filter added