@@ -1,18 +1,16 @@
 package com.example.smsrly.dto;
 
-import com.example.smsrly.entity.RealEstateImages;
+import com.example.smsrly.entity.RealEstateImage;
 import com.example.smsrly.entity.Request;
-import lombok.AllArgsConstructor;
 import lombok.Setter;
 import org.springframework.stereotype.Service;
 
 import java.util.Set;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Service
-@AllArgsConstructor
 public class RequestDTOMapper implements Function<Request, RealEstateDTO> {
+
     @Setter
     private Set<Long> savedRealEstatesIds;
 
@@ -33,8 +31,8 @@ public class RequestDTOMapper implements Function<Request, RealEstateDTO> {
                 request.getRealEstate().getCountry(),
                 request.getRealEstate().getIsSale(),
                 request.getRealEstate().getRealEstateImages().stream()
-                        .map(RealEstateImages::getRealEstateImageURL)
-                        .collect(Collectors.toList()),
+                        .map(RealEstateImage::getImageURL)
+                        .toList(),
                 savedRealEstatesIds.contains(request.getRealEstate().getId()));
     }
 }
