@@ -1,23 +1,30 @@
 package com.example.smsrly.service;
 
+import com.example.smsrly.dao.RealEstateSearchDao;
+import com.example.smsrly.dao.SearchRequest;
 import com.example.smsrly.dto.*;
 import com.example.smsrly.entity.RealEstate;
 
+import com.example.smsrly.entity.Request;
 import com.example.smsrly.entity.User;
 import com.example.smsrly.exception.InputException;
 import com.example.smsrly.repository.RealEstateRepository;
 import com.example.smsrly.repository.RequestRepository;
 import com.example.smsrly.repository.SaveRepository;
+import com.example.smsrly.utilities.PagingResponse;
 import com.example.smsrly.utilities.RealEstateRequest;
 import com.example.smsrly.utilities.Response;
 import com.example.smsrly.utilities.Util;
 import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Slice;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 
 @Service
@@ -31,6 +38,7 @@ public class RealEstateService {
     private final Util util;
     private final RealEstateDTOMapper realEstateDTOMapper;
     private final UserRequestDTOMapper userRequestDTOMapper;
+    private final RealEstateSearchDao realEstateSearchDao;
 
     public Response deleteRealEstate(String authHeader, long realEstateId) {
         User user = userService.getUser(authHeader);
@@ -55,6 +63,10 @@ public class RealEstateService {
             throw new InputException(util.getMessage("real.estate.update.access.denied"));
         }
 
+        if (isRealEstateDuplicated(request, user)) {
+            throw new InputException(util.getMessage("real.estate.duplicated"));
+        }
+
         realEstate.setTitle(request.getTitle());
         realEstate.setDescription(request.getDescription());
         realEstate.setArea(request.getArea());
@@ -71,22 +83,29 @@ public class RealEstateService {
         return Response.builder().message(util.getMessage("real.estate.updated")).build();
     }
 
+    private boolean isRealEstateDuplicated(RealEstateRequest request, User user) {
+
+        return realEstateRepository.findRealEstatesWithSameDetails(
+                request.getTitle(),
+                request.getDescription(),
+                request.getArea(),
+                request.getBathroomNumber(),
+                request.getRoomNumber(),
+                request.getPrice(),
+                request.getLatitude(),
+                request.getLongitude(),
+                user.getId()
+        ).isPresent();
+    }
+
     public Response uploadRealEstate(RealEstateRequest request, String authHeader) {
         User user = userService.getUser(authHeader);
 
-        boolean isRealEstateDuplicated = realEstateRepository.getRealEstatesWithSameDetails(
-                request.getArea(),
-                request.getBathroomNumber(),
-                request.getDescription(),
-                request.getLatitude(),
-                request.getLongitude(),
-                request.getPrice(),
-                request.getRoomNumber(),
-                request.getTitle(),
-                user.getId()
-        ).isPresent();
+        if (user.getPhoneNumber() == null) {
+            throw new InputException(util.getMessage("account.phone-number.not-exists"));
+        }
 
-        if (isRealEstateDuplicated) {
+        if (isRealEstateDuplicated(request, user)) {
             throw new InputException(util.getMessage("real.estate.duplicated"));
         }
 
@@ -123,37 +142,52 @@ public class RealEstateService {
     }
 
 
-    public List<RealEstateDTO> getRealEstates(String authHeader) {
+    public PagingResponse getRealEstates(String authHeader, int page, int size) {
         User user = userService.getUser(authHeader);
         Set<Long> savedRealEstatesIds = saveRepository.findSavesByUserId(user.getId());
         realEstateDTOMapper.setSavedRealEstatesIds(savedRealEstatesIds);
 
         boolean isLocationExists = user.getLatitude() != null && user.getLongitude() != null;
 
-        return isLocationExists ?
-                realEstateRepository.getRealEstateNearestToUser(
-                                user.getLatitude(),
-                                user.getLongitude(),
-                                user.getId()
-                        )
-                        .stream()
-                        .map(realEstateDTOMapper)
-                        .collect(Collectors.toList())
-                : realEstateRepository.getAllRealEstates(user.getId())
-                .stream()
+        Pageable pageable = PageRequest.of(page, size);
+        Slice<RealEstate> realEstates = isLocationExists ?
+                realEstateRepository.findAllRealEstatesNearestToUser(
+                        user.getLatitude(),
+                        user.getLongitude(),
+                        user.getId(),
+                        pageable
+                ) : realEstateRepository.findAllRealEstates(user.getId(), pageable);
+
+        List<RealEstateDTO> realEstatesList = realEstates.stream()
                 .map(realEstateDTOMapper)
-                .collect(Collectors.toList());
+                .toList();
+
+        return util.pagingResponse(realEstates, realEstatesList);
     }
 
-    public List<UserRequestDTO> getRealEstateRequests(String authHeader, long realEstateId) {
+    public PagingResponse getRealEstateRequests(String authHeader, long realEstateId, int page, int size) {
         User user = userService.getUser(authHeader);
         RealEstate realEstate = realEstateRepository.findById(realEstateId).orElseThrow(() -> new InputException("realEstate with id " + realEstateId + " not exists"));
         if (user != realEstate.getUser()) {
             throw new InputException(util.getMessage("real.estate.not.owner"));
         }
-        return requestRepository.getRequestsByRealEstateId(realEstateId).stream()
+
+        Pageable pageable = PageRequest.of(page, size);
+        Slice<Request> requests = requestRepository.findRequestsByRealEstateId(realEstateId, pageable);
+        List<UserRequestDTO> realEstateRequests = requests.stream()
                 .map(userRequestDTOMapper)
-                .collect(Collectors.toList());
+                .toList();
+
+        return util.pagingResponse(requests, realEstateRequests);
     }
 
+    public PagingResponse getFilteredRealEstate(String authHeader, SearchRequest searchRequest, int page, int size) {
+        User user = userService.getUser(authHeader);
+        Set<Long> savedRealEstatesIds = saveRepository.findSavesByUserId(user.getId());
+        realEstateDTOMapper.setSavedRealEstatesIds(savedRealEstatesIds);
+        Pageable pageable = PageRequest.of(page, size);
+        Slice<RealEstate> filters = realEstateSearchDao.findAllByCriteria(searchRequest, pageable, user);
+        List<RealEstateDTO> filteredRealEstates = filters.stream().map(realEstateDTOMapper).toList();
+        return util.pagingResponse(filters, filteredRealEstates);
+    }
 }
